--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.6.0",
     "firebase-admin": "^10.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
