--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.0",
+    "firebase": "^9.1.3",
     "firebase-admin": "^10.0.0",
     "next": "11.1.2",
+    "next-iron-session": "^4.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
