--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@popperjs/core": "^2.10.2",
@@ -21,7 +20,6 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
-    "eslint": "8.0.1",
     "eslint-config-next": "11.1.2"
   }
 }
