--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.1.0",
+    "vite": "^2.8.4"
   },
   "devDependencies": {
     "@popperjs/core": "^2.10.2",
     "@sveltejs/kit": "next",
+    "autoprefixer": "^10.4.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "install": "^0.13.0",
     "normalize.css": "^8.0.1",
+    "npm": "^8.5.1",
     "nprogress": "^0.2.0",
-    "svelte": "^3.34.0"
+    "postcss": "^8.4.6",
+    "svelte": "^3.34.0",
+    "tailwindcss": "^3.0.23"
   }
 }
