--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
+    "@tailwindcss/forms": "^0.4.0",
     "cookie": "^0.4.1",
     "node-fetch": "^3.1.0",
     "vite": "^2.8.4"
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@popperjs/core": "^2.10.2",
     "@sveltejs/kit": "next",
+    "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
