--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@lukeed/uuid": "^2.0.0",
     "@tailwindcss/forms": "^0.4.0",
     "cookie": "^0.4.1",
+    "crypto-js": "^4.1.1",
+    "lodash": "^4.17.21",
     "node-fetch": "^3.1.0",
     "vite": "^2.8.4"
   },
