--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@popperjs/core": "^2.10.2",
     "@sveltejs/kit": "next",
     "@tailwindcss/typography": "^0.5.2",
+    "@zerodevx/svelte-toast": "^0.7.1",
     "autoprefixer": "^10.4.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
