--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.1.1",
     "lodash": "^4.17.21",
     "node-fetch": "^3.1.0",
+    "svelte-simple-modal": "^1.3.1",
     "vite": "^2.8.4"
   },
   "devDependencies": {
