--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie": "^0.4.2",
     "crypto-js": "^4.1.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.2",
     "node-fetch": "^3.1.0",
     "svelte-simple-modal": "^1.3.1",
     "vite": "^2.8.4"
