--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.2",
     "node-fetch": "^3.1.0",
     "svelte-simple-modal": "^1.3.1",
+    "svelty-picker": "^1.2.4",
     "vite": "^2.8.4"
   },
   "devDependencies": {
