--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@popperjs/core": "^2.10.2",
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "^1.0.0-next.240",
     "@tailwindcss/typography": "^0.5.2",
     "@zerodevx/svelte-toast": "^0.7.1",
     "autoprefixer": "^10.4.2",
@@ -36,7 +36,7 @@
     "npm": "^8.5.1",
     "nprogress": "^0.2.0",
     "postcss": "^8.4.6",
-    "svelte": "^3.34.0",
+    "svelte": "^3.46.2",
     "tailwindcss": "^3.0.23"
   }
 }
