--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nprogress": "^0.2.0",
     "postcss": "^8.4.6",
     "svelte": "^3.46.2",
+    "svelte-paginate": "^0.0.1",
     "tailwindcss": "^3.0.23"
   }
 }
