--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "@tailwindcss/forms": "^0.4.0",
+    "chart.js": "^3.7.1",
     "cookie": "^0.4.2",
     "crypto-js": "^4.1.1",
     "lodash": "^4.17.21",
@@ -37,7 +38,6 @@
     "nprogress": "^0.2.0",
     "postcss": "^8.4.6",
     "svelte": "^3.46.2",
-    "svelte-paginate": "^0.0.1",
     "tailwindcss": "^3.0.23"
   }
 }
